    transaction. 
  - a new emaj_find_previous_mark_group() function returns the name of the 
    mark that immediately precedes a given date and time for a group.

Bug fixes:
  - during emaj_start_group() avoid double lock of tables and reoder events
    in the emaj_hist table.
  - in emaj_verify_all() function, add a check on orphan truncate functions.

0.9.1
-----
Enhancements:
  - emaj_snap_group(): avoid setting explicit locks on tables because it is 
    not necessary to get a coherent image of all tables of the group.
  - the emaj_log_stat_group() function has been refactored. A new internal 
    _log_stat_table() function has been created.
  - the group_creation_datetime column of the emaj_group table is now 
    initialized with the transaction timestamp instead of the clock timestamp.
  - main functions set a lock on the emaj_group row representing the working 
    group to prevent simultaneous execution of these functions.
  - in emaj_start_group() and emaj_set_mark_group() functions, a mark name may 
    contain '%' wild characters. They are automatically replaced by a sequence 
    of digits from the current time.
  - while locking tables of a group, if a deadlock occurs, the locking 
    operation is cancelled and retried up to 5 times before the transaction 
    aborts.  The comment in the history table reports the number of locked 
    tables and the number of deadlocks encountered.

Bug fixes:
  - fix a case of infinite wait on parallel rollback at foreign key processing 
    when several tables affected to different sub-groups have a foreign key 
    referencing a table that has no row to rollback.
  - in emaj_start_group() and emaj_set_mark_group() functions, avoid empty or 
    NULL mark names. If the supplied mark name is NULL or empty, a name is 
    automaticaly generated as "MARK_" followed by digits from the current time.
  - fix an invalid column name referenced in emaj_delete_mark_group() function.