@@ -30,6 +30,7 @@ Bug fixes:
   - during emaj_start_group() avoid double lock of tables and reoder events
     in the emaj_hist table.
   - in emaj_verify_all() function, add a check on orphan truncate functions.
+  - a missing check has been added in internal _verify_group() function.
 
 0.9.1
 -----
